--- a/src/login/login.html
+++ b/src/login/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <title>Авторизация</title>
     
 </head>
@@ -15,6 +14,11 @@
         <label>Password<input name="password" type = 'password'></label>        
         <button type="submit" name='btn' class="btn">Войти</button>
     </form>
-    <a href="../authorization/index.html">Регитрация</a>
+
+    <div class="modal-authorization">
+        
+    </div>
+
+    <a href="../authorization/authorization.html">Регитрация</a>
 </body>
 </html>
