--- a/src/map/map.html
+++ b/src/map/map.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +11,7 @@
         <div class="wrapper">
             <ul class="menu__box">
                 <li class="menu__item">
-                    <a class="menu__link" href="../home/home.html">Главная</a>
+                    <a class="menu__link" href="/">Главная</a>
                 </li>
                 <li class="menu__item">
                     <a class = "menu__link" href="../clients/clients.html">Клиенты</a>
@@ -24,6 +23,8 @@
             <button class="btn" type="button">Выход</button>
         </div>
     </nav>
-    <script src="./main.js"></script>
+
+    <div id="map"></div>
+
 </body>
 </html>
