added scroll up button and added information above the table

--- a/src/clients/clients.html
+++ b/src/clients/clients.html
@@ -52,7 +52,6 @@
         <span class="notification__btn"></span>
         <span class="notification__text">Данные успешно удалены</span>
     </div>
-    <button class="scroll">
-    </button>
+    <input type="button" value="&#9650;" class="scroll">
 </body>
 </html>
