--- a/src/login/login.html
+++ b/src/login/login.html
@@ -19,6 +19,6 @@
         
     </div>
 
-    <a href="../authorization/authorization.html">Регитрация</a>
+    <a class="authorization" href="../authorization/authorization.html">Регистрация</a>
 </body>
 </html>
