--- a/src/home/home.html
+++ b/src/home/home.html
@@ -11,7 +11,7 @@
         <div class="wrapper">
             <ul class="menu__box">
                 <li class="menu__item">
-                    <a class="menu__link" href="/">Главная</a>
+                    <a class="menu__link" href="../home/home.html">Главная</a>
                 </li>
                 <li class="menu__item">
                     <a class = "menu__link" href="../clients/clients.html">Клиенты</a>
