--- a/src/clients/clients.html
+++ b/src/clients/clients.html
@@ -23,7 +23,7 @@
             <button class="btn" type="button">Выход</button>
         </div>
     </nav>    
-    <div id="client-info">
+    <div class="client-info">
         <table border="1">
             <thead>
                 <tr>
@@ -38,7 +38,7 @@
         </table>
     </div>
 
-    <div class="openModal">
+    <div class="open-modal">
         <div class="modal-dialog">
             Вы действительно хотите удалить?
             <div class="modal-btn">
