--- a/src/login/login.html
+++ b/src/login/login.html
@@ -10,15 +10,10 @@
 <body>
 
     <form method="" action="">
-        <label>Email<input name="email" type="text"></label>
-        <label>Password<input name="password" type = 'password'></label>        
-        <button type="submit" name='btn' class="btn">Войти</button>
+        <label><span>Email</span><input name="email" type="text" required></label>
+        <label><span>Password</span><input name="password" type = "password" required></label>    
+        <button type="submit" name='btn'>Войти</button>
     </form>
-
-    <div class="modal-authorization">
-        
-    </div>
-
     <a class="authorization" href="../authorization/authorization.html">Регистрация</a>
 </body>
 </html>
